--- a/analysis_real_spectra.student.ipynb
+++ b/analysis_real_spectra.student.ipynb
@@ -253,11 +253,11 @@
     "plt.axhline(contlevel, color='red')\n",
     "\n",
     "#line peak\n",
-    "linepeak = 8\n",
+    "linepeak = 8.3\n",
     "plt.axhline(linepeak, color='red')\n",
     "\n",
     "#Provide a calculation to determine the half maximum\n",
-    "halfmax = ((linepeak - contlevel) / 2) + contlevel #\n",
+    "halfmax = ((linepeak - contlevel) / 2) + contlevel #The half max is the average of the peak and adding the continuum level raises it\n",
     "plt.axhline(halfmax,color='magenta',linestyle='--')\n",
     "\n",
     "#Now find wavelengths corresponding to short and long wavelength sides of FWHM by using the vertical \n",
@@ -268,12 +268,12 @@
     "plt.axvline(highlam,color='goldenrod')\n",
     "\n",
     "#calculate the FWHM\n",
-    "deltalam = highlam - lowlam\n",
+    "deltalam = highlam - lowlam #The difference between the two wavelengths is the FWHM\n",
     "print('Delta Lambda = %5.2f' % deltalam)\n",
     "\n",
     "#calculate the spectral resolution\n",
-    "lamcent = (deltalam/2) + lowlam\n",
-    "specres = lamcent/deltalam\n",
+    "lamcent = (deltalam/2) + lowlam #The center wavelength is the average of the two wavelengths and adding the low wavelength raises it\n",
+    "specres = lamcent/deltalam #The spectral resolution is the center wavelength divided by the FWHM\n",
     "print('R = %6.2f' % specres)"
    ]
   },
@@ -343,7 +343,7 @@
     "with warnings.catch_warnings():  # Ignore warnings\n",
     "    warnings.simplefilter('ignore')\n",
     "    fitted_continuum = fit_generic_continuum(specm57,exclude_regions=excl_region, median_window= 1 ,\n",
-    "                                             model=models.Chebyshev1D(degree=  7))\n",
+    "                                             model=models.Chebyshev1D(degree=  7)) #Bye eye, I found that a 7th degree polynomial fit the data well where most of the data sits on the fit.\n",
     "#this is the fitted continuum\n",
     "y_fit = fitted_continuum(specm57.wavelength)\n",
     "\n",
@@ -477,7 +477,7 @@
     "contlam = (specm57.wavelength>4800 *u.Angstrom) & (specm57.wavelength<4840 * u.Angstrom)\n",
     "\n",
     "#now compute the average of the continuum subtracted spectrum in that region and print it out.\n",
-    "meancont = np.average(contsubspec[contlam])\n",
+    "meancont = np.mean(contsubspec[contlam])\n",
     "print('mean continuum = %5.3f' % meancont)\n",
     "\n",
     "#now correct the continuum subtracted spectrum by that amount\n",
@@ -502,7 +502,7 @@
     "#### Problem 2c (5 points)\n",
     "Comment on whether the spectra now has a better continuum subtraction and how you know this.\n",
     "\n",
-    "It is best to zero out the spectra as much as possible. We take the average from the subtraction to better fit the linear 0 point."
+    "The second spectra has a better contnumm subtracted. The continnumm is mostly around the zero'ed out area and most points are either on that 0 line or are very close to that dotted line. You can see that the mean value is really close to 0 which means the average point sits on or around that region. The first one had most points a bit below zero which would make subtracting the spectrum inaccurate as the subtracted flux would be lower than what the true value is."
    ]
   },
   {
@@ -588,11 +588,11 @@
     "#Your code here\n",
     "#you will need to use the fitted parameters to determine the Delta lambda and the spectral resolution\n",
     "# (remove for students) I compute this using the relation between a Gaussian sigma and the FWHM RIP\n",
-    "deltalam = 2.355 * stddev\n",
+    "deltalam = 2.355 * stddev #The FWHM is 2.355 times the standard deviation\n",
     "print('Delta Lambda = %5.2f' % deltalam)\n",
     "\n",
     "#calculate the spectral resolution\n",
-    "specres = mean/deltalam\n",
+    "specres = mean/deltalam \n",
     "print('R = %6.2f' % specres)\n"
    ]
   },
@@ -604,6 +604,7 @@
     "#### Problem 2d (5 points)\n",
     "Comment in this cell on how the two methods agree and which one you think is more reliable.\n",
     "\n",
+    "I would agree more on the method of function fitting. When trying to analyze the data, eyeing can lead to a lot of uncertainty and unreliable just because you cannot quantify how well your estimation fits. Without that data, you can't convey how reliable your eyed answer is other than having someone confirm wether they agree or not. The data we are getting is not perfect so we want to reduce the amount of uncertainty. Although not perfect, using a model would be the better option overall because you can adjust the parameters and they stay consistent. For eyeing the subtraction, I can decide that my answer is actually inaccurate because my judgment can change making eye balling the subtraction inaccurate.\n",
     "**answer here** "
    ]
   },
@@ -615,7 +616,9 @@
     "### Problem 3 (10 points)\n",
     "Assume that the slit went right through the center of the planetary nebula.  Using what you know about the composition of planetary nebula (not necessarily from this class), describe here from where the broad emission lines and sharp rise in flux at the blue end of the planetary nebula come from.\n",
     "\n",
-    "In the center lies the core of the \"dead\" star which is just a white dwarfs. Since white dwarfs are composed of mostly carbon and other heavier elemenets, if you took a spectrum of the white dwarf in the center, you would expect to see most of the broad lines coming from the elements that are formed at the end of the star's life."
+    "In the center lies the core of the \"dead\" star which is just a white dwarfs. Since white dwarfs are composed of mostly carbon and other heavier elemenets, if you took a spectrum of the white dwarf in the center, you would expect to see most of the broad lines coming from the elements that are present near the end of the star which includes the typical hydrogen, helium, and heavier elements dependent on the magnitude of explosion.\n",
+    "\n",
+    "Those emission lines are more prevelent being wider and higher amplitudes around the ceneter of the planetary nebula because around that area, the gas is at the highest temerature compared to the surrounding area. The hotter ionized gas will produce with formed elements will provide corresponding emission lines. The line depends on what we're looking at. We also see that there could be a doppler shift in the spectra because the nebula does not have uniform velocity. You could see some broader lines purely because they were redshifted and moving away from the observer's POV. The redshift scattered the photons which could change how much we see in one wavelength."
    ]
   },
   {
@@ -764,9 +767,9 @@
     "\n",
     "After doing unit conversions in wavelength from angstrom to meters:\n",
     "\n",
-    "The temperature of Jupiter is: 4964.546969043296 K\n",
+    "The temperature of Jupiter is: 4965.0 K\n",
     "\n",
-    "The temperature of G2V: 6433.864312020233 K"
+    "The temperature of G2V: 6434. K"
    ]
   },
   {
@@ -782,7 +785,9 @@
    "id": "51afc780",
    "metadata": {},
    "source": [
-    "C) Since Jupiter is mostly reflected light, we can assume that most of the spectrum is produced that of the sun's heat and Jupiter's atmosphere. The heat of the sun can cause reactions that are not originally possible with Jupiter on it's own. "
+    "C) Since Jupiter is mostly reflected light, we can assume that most of the spectrum is produced that of the sun's heat and Jupiter's atmosphere. The heat of the sun can cause reactions that are not originally possible with Jupiter on it's own.\n",
+    "\n",
+    "Since Jupiter is mostly reflected light, most of the spectrum taken of Jupiter is that of the sun. Jupiter is not a perfect mirror so it will absorb some of the incident light. This means that Jupiter will not be produce a complete blackbody radiation. Jupiter could also broaden some lines around specific elements such as the elements that make up the gas giant simply because there's more in abundance visible in the spectrum. "
    ]
   },
   {
@@ -797,7 +802,13 @@
     "Using what you know about the spectral lines in an A0V star and given the spectrum of Vega plotted below, identify as many of the lines as you can in the spectrum of Jupiter.  By \"identify\" I mean give the wavelength, the name of the element that makes the line, and which transition of that element causes the specific line.  If you think you should fine a line and can't write why it isn't there.  Please be detailed in your answer. *Note - The line at 6880$\\mathring A$ is from the Earth's atmosphere and should be ignored*\n",
     "**answer here**\n",
     "\n",
-    "We can identify the lines by comparing which lines are visible in both Vega and Jupiter. Initially you can see that there are 4 absorbtion lines at wavelengths estimated at 4,400, 4,750, 6,650, and 6,800 angstrom. We can ignore the 6800 wavelength because that is a line from the Earth's atmosphere. Next stop is to zoom into the suspected lines. When zooming in we see that H $\\alpha$ and H$\\beta$ are there without a large amount of certainty because those lines are almost on dipping at those points. After trying to match up the lines with known absorbtion wavelengths, we have two lines: H beta: 4861 $\\mathring A$ and H alpha: 6563 $\\mathring A$. We have to rule out the one estimated at 6,650 because it is not lined up with the line below it.\n",
+    "We can identify the lines by comparing which lines are visible in both Vega and Jupiter. Initially you can see that there are 4 absorbtion lines at wavelengths estimated at 4,400, 4,750, 6,650, and 6,800 angstrom. We can ignore the 6800 wavelength because that is a line from the Earth's atmosphere. Next stop is to zoom into the suspected lines. When zooming in we see that H $\\alpha$ and H$\\beta$ are there without a large amount of certainty because those lines are almost on dipping at those points. After trying to match up the lines with known absorbtion wavelengths, we have two lines: H beta: 4861 $\\mathring A$ and H alpha: 6563 $\\mathring A$.  We have to rule out the one estimated at 6,650 because it is not lined up with the line below it.\n",
+    "\n",
+    "Now we need to have the transition levels\n",
+    "\n",
+    "H beta has transition levels n = 3 to 2\n",
+    "\n",
+    "H alpha has transition levels n = 4 to 2\n",
     "\n"
    ]
   },
@@ -960,24 +971,13 @@
    "source": [
     "There are lines in common between M57 and Vega but they are in absorption in Vega and in Emission in M57. Note that the lines do not perfectly line up in wavelength as the M57 spectrum has not been perfectly wavelength calibrated.  \n",
     "\n",
-    "**(a)** The visible lines are practically the same line as we saw in the last question with the exception of an additional one. After zooming in, we can determine that there are three lines at about 4,400 $\\mathring A$, 4,700 $\\mathring A$, and 6,550 $\\mathring A$. When trying to check which lines we can compare them to known lines. After zooming in, I believe the lines that match best are H gamma, H beta, and H alpha. I would rule out H gamma however given the evidence that the other two lines were slightly shifted, I would say that H gamma would fall within the matching set. This spectrum is not perfectly wavelength calibrated which further supports that my estimates are more reasonable because none of the other lines match perfectly.\n",
+    "**(a)** The visible lines are practically the same line as we saw in the last question with the exception of an additional one. After zooming in, we can determine that there are three lines at about 4,400 $\\mathring A$, 4,700 $\\mathring A$, and 6,550 $\\mathring A$. When trying to check which lines we can compare them to known lines. After zooming in, I believe the lines that match best are H gamma: 4341 $\\mathring A$, H beta 4861 $\\mathring A$, and H alpha: 6563 $\\mathring A$. I would rule out H gamma however given the evidence that the other two lines were slightly shifted, I would say that H gamma would fall within the matching set. This spectrum is not perfectly wavelength calibrated which further supports that my estimates are more reasonable because none of the other lines match perfectly.\n",
     "\n",
     "**(b)** Explain why they are in emission in one spectrum and in absorption in the other.  Use your knowledge of Kirkhoffs laws.\n",
-    "\n",
-    "\n",
-    " \n",
     "*Note - The line at 6880$\\mathring A$ is from the Earth's atmosphere and should be ignored.*\n",
     "\n",
-    "**answer here**"
+    "Kirkchhoff's law says that a hot solid liquid or dense gas will produce an emission spectrum. The Vega nebula prouduces emission lines because it is really hot and the temperatures of the star will have more excited states of atoms. Atoms want to be as close as they can to ground so to do this, they will release light in the form of a photon to go to said lower states. M57 is a gas however since a planetary nebula is expanding, concequently it's density will decrease. Nebulas also have a lot of dust surrounding them which is the reason why we see absorbtion lines. These lines do not originate from the nebula itself rather from the dust that scatters the light. The absorbtion is evidence that the nebula's center is hot however the dust around it is absorbing causing it to heat up and light up."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b8e13677-7e25-436f-ab1e-a4e800844d05",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
